[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
default-run = "main"
edition = "2021"
name = "pagepal"
version = "0.1.0"

[dependencies]
confy = "0.4.0"
directories = "4.0.1"
futures = "0.3.21"
fxhash = "0.2.1"
itertools = "0.10.3"
log = "0.4.17"
notify= "5.0.0-pre.15"
rand = "0.8.5"
rayon = "1.5.3"
select = "0.6.0-alpha.1"
serde_json = "1.0.82"

[dependencies.fstree]
path="../fstree"
[dependencies.bimap]
features = ["serde"]
version = "0.6.2"
[dependencies.chrono]
features = ["serde"]
version = "0.4.19"
[dependencies.iced]
features = ["tokio", "image", "debug"]
git = "https://github.com/hecrj/iced"
[dependencies.iced_native]
git = "https://github.com/hecrj/iced"
[dependencies.reqwest]
features = ["stream", "cookies", "gzip"]
version = "0.11.11"
[dependencies.simple_logger]
default-features = true # colorized
version = "2.2.0"
[dependencies.serde]
features = ["derive"]
version = "1.0.138"
[dependencies.tokio]
default-features = false
features = ["fs", "time", "net", "macros", "rt-multi-thread"]
version = "1.19.2"
[dependencies.url]
features = ["serde"]
version = "2.2.2"
