[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
default-run = "main"
edition = "2021"
name = "pagepal"
version = "0.1.0"

[dependencies]
confy = "0.5.1"
directories = "5.0.1"
fxhash = "0.2.1"
itertools = "0.10.3"
notify = "6.0.0"
select = "0.6.0-alpha.1"
serde_json = "1.0.82"

dashmap = {workspace = true}
env_logger = {workspace = true}
futures = {workspace = true}
log = {workspace = true}
reqwest = {workspace = true}
time = {workspace = true}
tokio = {workspace = true}
url = {workspace = true}

[dependencies.fstree]
path = "../fstree"
[dependencies.bimap]
features = ["serde"]
version = "0.6.2"
[dependencies.chrono]
features = ["serde"]
version = "0.4.19"
[dependencies.iced]
features = ["tokio", "image", "debug"]
git = "https://github.com/hecrj/iced"
[dependencies.iced_native]
git = "https://github.com/hecrj/iced"
