[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
default-run = "retriever"
edition = "2021"
name = "retriever"
version = "0.1.0"

[dependencies]
cached = "0.39.0"
futures = "0.3.24"
log = "0.4.17"
lol_html = "0.3.1"
rayon = "1.5.3"
select = "0.6.0-alpha.1"
static_init = "1.0.3"
time = "0.3.14"

[dependencies.clap]
features = ["derive"]
version = "3.2.21"
[dependencies.dashmap]
features = ["rayon"]
version = "5.4.0"
[dependencies.reqwest]
features = ["stream", "cookies", "gzip"]
version = "0.11.11"
[dependencies.env_logger]
default-features = true # colorized
version = "0.9.0" 
[dependencies.tokio]
default-features = false
features = ["time", "net", "macros", "rt-multi-thread"]
version = "1.21.1"
[dependencies.url]
features = ["serde"]
version = "2.3.1"
[dependencies.uuid]
features = ["v5"]
version = "1.1.2"
