[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
default-run = "retriever"
edition = "2021"
name = "retriever"
version = "0.1.0"

[dependencies]
# cached = "0.40.0"
# lol_html = "0.3.1"
# static_init = "1.0.3"
epub-builder = "0.5.0"
select = "0.6.0"

[dependencies.clap]
features = ["derive"]
version = "4.3.0"
[dependencies.uuid]
features = ["v5"]
version = "1.3.3"
[dependencies.dashmap]
workspace = true
[dependencies.env_logger]
workspace = true
[dependencies.futures]
workspace = true
[dependencies.log]
workspace = true
[dependencies.reqwest]
workspace = true
[dependencies.time]
workspace = true
[dependencies.tokio]
workspace = true
[dependencies.url]
workspace = true
