[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
edition = "2021"
name = "storage"
version = "0.1.0"

[dependencies]
rayon = "1.5.3"
futures = "0.3.23"
log = "0.4.17"

[dependencies.serde]
features = ["derive"]
version = "1.0.144"
[dependencies.simple_logger]
default-features = true # colorized
version = "2.3.0"
[dependencies.tokio]
default-features = false
features = ["fs", "time", "net", "macros", "rt-multi-thread"]
version = "1.20.1"
