[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
edition = "2021"
name = "storage"
version = "0.1.0"

[dependencies]
# env_logger = {workspace = true}
futures = {workspace = true}
# log = {workspace = true}
# rayon = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
url = {workspace = true}
